# mppi

./: .gitignore  CMakeLists.txt  package.xml  setup.py
batch/: batch_config.yaml  batch_runner.py  sim_Spielberg_map.yaml  sim_track_01.yaml  sim_track_02.yaml  tracks.yaml  weight_optimizer.py
config/: cost_weights.yaml  sim.yaml  testing_env.yaml
include/mppi/: gap_detector.hpp  kernel_launch.hpp  mppi_cuda.hpp  mppi_kernel.cuh  mppi_util.hpp  util.hpp  vehicle_util.hpp
launch/: batch_launch.py  mppi.launch.py
mppi/: TimeUtil.py  baseline_generation.py  generate_track.py  log_viz.py  mppi_controller.py  path_pipeline.py  procedural_generator.py  profile_comparison.py  raceline_optimizer.py  rerun_bag.py
results/: summary.csv
results/Spielberg_map/: baseline.csv  metrics.json  optimized.csv  run_log.csv
results/track_01/: baseline.csv  metrics.json  optimized.csv  run_log.csv
results/track_02/: baseline.csv  metrics.json  optimized.csv  run_log.csv
scripts/: README.md  lap_logger.py  local_map.py  monitor_node.py  mppi.py  mppi_controller.py  path_planner.py  raceline_generation.py  raceline_optimizer.py
src/: mppi_cuda.cpp  mppi_cuda.cu  mppi_kernel.cu
test/: test_dynamics.cpp  test_kernel.cpp  test_kernel_device.cu
